--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,30 @@ yarn-error.log*
 *_bs.ml
 *_bs.mli
 _esy
+*.annot
+*.cmo
+*.cma
+*.cmi
+*.a
+*.o
+*.cmx
+*.cmxs
+*.cmxa
+
+.merlin
+*.install
+*.coverage
+*.sw[lmnop]
+
+_build/
+_doc/
+_coverage/
+_opam/
+
+odoc.css
+bench.tsv
+_esy
+node_modules
+lib/bs
+.bsb.lock
+.melange.eobjs
