--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,32 +1,32 @@
-
 {
-  "name": "client",
-  "version": "0.0.1",
+  "name": "counters",
   "generators": [
     {
       "name": "atd_t",
-      "command": "esy atdgen -t $in"
+      "command": "npx atdgen -t $in"
     },
     {
       "name": "atd_bs",
-      "command": "esy atdgen -bs $in"
+      "command": "npx atdgen -bs $in"
     }
   ],
-  "sources": {
-    "dir" : "src",
-    "subdirs" : true,
-    "generators": [
-      {
-        "name": "atd_t",
-        "edge": ["meetup_t.ml", "meetup_t.mli", ":", "meetup.atd"]
-      },
-      {
-        "name": "atd_bs",
-        "edge": ["meetup_bs.ml", "meetup_bs.mli", ":", "meetup.atd"]
-      }
-    ]
-  },
-  "package-specs": {
+  "sources": [
+    { "dir": "src" },
+    {
+      "dir": "shared",
+      "generators": [
+        {
+          "name": "atd_t",
+          "edge": ["Counter_t.ml", "Counter_t.mli", ":", "Counter.atd"]
+        },
+        {
+          "name": "atd_bs",
+          "edge": ["Counter_bs.ml", "Counter_bs.mli", ":", "Counter.atd"]
+        }
+      ]
+    }
+  ],
+"package-specs": {
     "module": "commonjs",
     "in-source": true
   },
@@ -35,8 +35,7 @@
     "@ahrefs/bs-atdgen-codec-runtime"
   ],
   "warnings": {
-    "error" : "+101"
+    "error": "+101"
   },
-  "generate-merlin": true,
-  "namespace": true
+  "generate-merlin": true
 }
