--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@ahrefs/bs-atdgen-codec-runtime": "^2.0.1",
+    "bs-fetch": "^0.6.2",
+    "isomorphic-fetch": "^3.0.0",
     "uuid": "^8.3.2"
   }
 }
